# mt

./: CMakeLists.txt  config.h.in  revision.h.in
src/: common.cpp  common.h  main.cpp  mt.cpp  mt.h  winemenubuilder.c  wmic.c
