CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH};$ENV{CMAKE_MODULE_PATH}")

INCLUDE(common OPTIONAL)

IF(NOT COMMON_MODULE_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find common.cmake! Please place it in CMakeModules subdirectory, set CMAKE_MODULE_PATH environement variable or set CMAKE_MODULE_PATH parameter to CMake.")
ENDIF(NOT COMMON_MODULE_FOUND)

SET(VERSION_MAJOR 1)
SET(VERSION_MINOR 0)
SET(VERSION_PATCH 0)
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
SET(VERSION_RC "${VERSION_MAJOR},${VERSION_MINOR},${VERSION_PATCH},0")
SET(AUTHOR "Kervala")
SET(PRODUCT "Kervala MT")
SET(DESCRIPTION "Microsoft mt.exe clone for WINE")
SET(TARGET_ICON "kmt.ico")
SET(TARGET "kmt")
SET(YEAR "2012")

PROJECT(${PRODUCT} CXX C)

INIT_DEFAULT_OPTIONS()

SET_OPTION_DEFAULT(WITH_EXCEPTIONS OFF)
SET_OPTION_DEFAULT(WITH_RTTI OFF)

SETUP_DEFAULT_OPTIONS()

INIT_BUILD_FLAGS()
SETUP_BUILD_FLAGS()

SETUP_PREFIX_PATHS(${TARGET})
GEN_CONFIG_H()
GEN_REVISION_H()

SETUP_EXTERNAL()

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)

FILE(GLOB HEADER src/*.h)
FILE(GLOB SRC src/*.cpp res/*.rc)

SOURCE_GROUP("src" FILES ${SRC} ${HEADER})

SET_TARGET_CONSOLE_EXECUTABLE(${TARGET} ${SRC} ${HEADER})
SET_TARGET_LABEL(${TARGET} ${PRODUCT})
TARGET_LINK_LIBRARIES(${TARGET} Imagehlp)

IF(WITH_PCH)
  ADD_NATIVE_PRECOMPILED_HEADER(${TARGET} ${CMAKE_CURRENT_SOURCE_DIR}/src/common.h ${CMAKE_CURRENT_SOURCE_DIR}/src/common.cpp)
ENDIF(WITH_PCH)
